package no.hiof.setgroup7.model;

public class From {
    private String place;
    private String name;

    From () {

    }

    public From(String place, String name) {
        this.place = place;
        this.name = name;
    }

    public String getPlace() {
        return place;
    }

    public void setPlace(String place) {
        this.place = place;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
