@startuml
'https://plantuml.com/class-diagram



class To{
    - place : String
    - name : String
}
class ToPlace{
    - name : String
    - latitude : double
    - longitude : double
}
class From{
    - place : String
    - name : String
}
class FromPlace{
    - name : String
    - latitude : double
    - longitude : double
    - vertexType : String
}

class TripPattern {
    - duration: int
    - legs: List<Leg>
    - startTime: String
    - endTime: String
}

class Leg {
    - mode : String
    - distance: double
    - expectedStartTime: String
    - expectedEndTime: String
    - fromPlace: FromPlace
    - toPlace: ToPlace
    - line : Line
    - steps: List<Step>
}

class Line {
    - id : String
    - transportMode: String
    - name: String
}

class Step {
    - distance: double
    - heading: String
    - streetName: String
    - stayOn: boolean
    - relativeDirection: String
    - longitude : double
    - latitude : double
}

class TripRequest {
    - from: From
    - to: To
    - numTripPatterns: int
    - dateTime: String
}

class TripResponse {
    - tripPatterns: List<TripPattern>
    - customerPrice : double
    + getTrips() : TripPattern
}

class Adult {
    + price : int
    + getPrice() : int
}
class Child {
    + price : int
    + getPrice() : int
}
class Senior {
     + price : int
     + getPrice() : int

}

class Student {
     + price : int
     + getPrice() : int

}

class Customer {
    - adult : Adult
    - child : Child
    - senior : Senior
    - student : Student
    - ageGroup : String
   + getBasePrice() : int
}


class TicketService {
    - tripResponse : TripResponse
    - customer : Customer
    - finalPrice : double
    + calculateDistance() : int
    + calculateDistancePrice(): double
}

class TripInputDTO{
    - tripType: String
    - person : String
    - from : String
    - to : String
    - toPlace : String
    - date : String
    - time : String
}

class TripController{
    tripRepository : TripRepository
    tripRequest : TripRequest
    tripInputDTO : TripInputDTO
    - tripValidator : TripValidator
    tripService : TripService
    tripResponse : TripResponse
    customer : Customer
    ticketService : TicketService
    + getTripFormData(Context) : void
}

class TripRepository{

}

class TripValidator{
    tripInputDTO : TripInputDTO
    + isValid(Context) : boolean
    isNullOrEmpty(String) : boolean
}

class TripService{
    - enturClient : EnturClient
    + getTrip(TripRequest) : TripRequest
}

class EnturClient{
    query : String
    tripRequest : TripRequest
    tripResponse : TripResponse
}
class EnturResponse {
    data : DataWrapper
}

class DataWrapper{
    - trip : TripResponse
}

class SQLdbConnector{
    - sqlConnector : SQLConnector
    + run() : void
}

class sqlProcedures{
    - procedure : String
}
class SQLConnector{
    + getAllPois(sqlProcedures : sqlProcedures) : ArrayList<PoiDTO>
}

class PoiDTO{
    - latitude : float
    - longitude : float
    - placeName : String
    - placeType : String
    - city : String
    - area : String
}

class PoiFilter{
   + poiFilter(fromList: ArrayList<PoiDTO>, filterCondition1: String, filterCondition2: String, filterCondition3: String) : ArrayList<PoiDTO>
}

class userData{
    - username : String
    - password : String
}

TripPattern *-- Leg
Leg *-- Step
Leg *-- Line
PoiFilter *-- PoiDTO

Customer *-- Adult
Customer *-- Child
Customer *-- Senior
Customer *-- Student
TicketService ..> Customer
TicketService ..> TripResponse
TripResponse *-- TripPattern
TripResponse ..> TripRequest
Leg ..> FromPlace
Leg ..> ToPlace
TripRequest ..> To
TripRequest ..> From
TripRequest ..> EnturClient
TripValidator ..> TripInputDTO
TripController ..> TripInputDTO
TripController ..> TripResponse
TripController ..> TripRequest
TripController ..> TripService
TripController ..> TicketService
TripController ..> Customer
TripController ..> TripRepository
EnturResponse ..> DataWrapper
EnturClient ..> TripRequest
EnturClient ..> TripResponse
TripService ..> TripRequest
DataWrapper ..> TripResponse
SQLdbConnector ..> SQLConnector
SQLdbConnector *-- userData
SQLConnector ..> PoiDTO
SQLConnector ..> sqlProcedures


@enduml